--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.32.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
@@ -18,7 +19,9 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
