--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-session": "^1.17.3",
+    "method-override": "^3.0.0",
     "mongoose": "^6.6.5",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0"
