--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.32.0",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^4.6.0",
     "dayjs": "^1.11.6",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
